--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
 
 h1{
@@ -35,7 +34,6 @@ ul, li{
 
 .nnh{
   color: #fff;
-
 }
 
 footer{
@@ -56,6 +54,9 @@ footer a{
     .nnh{
       font-size: 17pt;
     }
+    body{
+      margin-top: 20px;
+    }
 }
 
 @media (max-width:500px){
@@ -63,6 +64,12 @@ footer a{
   font-size: 18px;
   }
   .nnh{
-    font-size: 16pt;
+    font-size: 12pt;
+  }
+  body{
+    margin-top: 20px;
+  }
+  p, li{
+    font-size: 12pt;
   }
 }
