--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  height: 100vh;
 }
 
 h1{
